Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-3787

Segfault in SslPlugin during shutdown

Attach filesAttach ScreenshotVotersWatch issueWatchersCreate sub-taskLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Minor
    • Resolution: Fixed
    • 0.14
    • 0.15
    • C++ Broker
    • None

    Description

      If the SslPlugin (ssl.so) module is loaded but the "--ssl-cert-db" option is not set, the broker will core dump on shutdown. This is because shutdownNSS is called in the SslPlugin destructor when initNSS was never called.

      Attachments

        Activity

          This comment will be Viewable by All Users Viewable by All Users
          Cancel

          People

            tross Ted Ross
            tross Ted Ross
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Slack

                Issue deployment