QPID-3787 - Fixed shutdown crash in SslPlugin, Fixed problem with sasl_mux test.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1236864 13f79535-47bb-0310-9956-ffa450edef68